--- a/Task_HelloWorld/index.html
+++ b/Task_HelloWorld/index.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Hello World Problem</title>
-    <link rel="stylesheet" href="index.css" />
-  </head>
-
-  <body style="margin: 0; padding: 0">
-    <!-- Start coding below FOR HELLO WORLD TASK -->
-  </body>
+<head>
+<title>Hello world</title>
+<h1>Hello world</h1>
+<B>Hello world</b>
+</head>
 </html>
