task: Task: Creating a Basic HTML Page

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Portfolio</title>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="index.css" />
-  </head>
 
   <body style="margin: 0; padding: 0">
-    <!-- Write your code below for PORTFOLIO -->
-    <!-- to import image from public folder, do it like this= <img src="../public/css.icon.png" alt="CSS image"> -->
+<h1>Priya Garg</h1>
+<ul>
+<li>About</li>
+
   </body>
 </html>
